# nsgt

./: .gitignore  APPLE_SILICON_OPTIMIZATION.md  Makefile  pyproject.toml  readme.txt  setup.cfg  setup.py
nsgt/: __init__.py  audio.py  fft.py  fscale.py  nsgfwin.py  nsgfwin_sl.py  nsigtf_loop.pyx  py312_improvements.py  quality.py
spectrogram_editor/: PROJECT_SUMMARY.md  README.md  requirements.txt  setup_dev.sh
spectrogram_editor/docs/: architecture.md  brush_design.md  gpu_pipeline.md
spectrogram_editor/dsp_service/: __init__.py  brush_kernels.py  main.py  nnaudio_gpu.py  nsgt_processor.py  texture_bridge.py
spectrogram_editor/flutter_app/: pubspec.yaml
spectrogram_editor/flutter_app/lib/: main.dart
spectrogram_editor/flutter_app/lib/platform/: dsp_service_client.dart
spectrogram_editor/flutter_app/lib/widgets/: brush_controls.dart  spectrogram_canvas.dart  transform_controls.dart
spectrogram_editor/platform_channels/windows/: CMakeLists.txt  spectrogram_texture_plugin.h
spectrogram_editor/shaders/: blur.frag  texture.vert  warp.frag
tests/: nsgfwin_test.py  quality_test.py  slicq_test.py
